--- a/my-new-app/src/index.css
+++ b/my-new-app/src/index.css
@@ -1,9 +1,5 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'rockwell';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -17,23 +13,35 @@ code {
  display: flex;
   width: 4rem;
   text-align: center;
+  outline: none;
 }
 
 .namePage{
-  height: 100%;
-  padding: 100px;
-  background-color: darkcyan;
+  text-align: center;
+  height:100vh;
+  box-shadow: 0rem 0.5rem 2rem 0.5rem rgba(0,0,0,0.5);
 }
 
+.button{
+  background-color:transparent;
+  border: none;
+  color: white;
+  text-align: center;
+  display: inline-block;
+  margin-left: 1rem;
+  
+}
 .topHalf{
-  display: flex;
 
+  display: flex;
   margin: auto;
   width: 13rem;
+  
   }
 
 
 .titleName{
+  margin-top: 25vh;
 font-size: 7rem;
 padding-bottom: 0;
 margin-bottom: 0;
@@ -42,13 +50,18 @@ margin-bottom: 0;
 .majorName{
 padding-top: 0;
 margin-top: 0;
+
 }
 
 .aboutMeSection{
+  margin-top: 0;
+  padding-top: 0;
   margin-left: 8rem;
   margin-right: 8rem;
+  width: 30rem;
   text-align: center;
   padding-top: 25%;
+
 }
   .clearfix::after {
     content: "";
